  EntityJSONParserTest.entity() improved, no longer depends on the order of values (failed in Java 8)
  DefaultEntityComboBoxModel no longer overrides vetoSelectionChange() with a final method
  DefaultFilteredComboBoxModel.vetoSelectionChange() renamed to allowSelectionChange() for consistency
  LoginProxy.doLogout() added
  EntityConnectionProviders.createConnectionProvider() overloaded with clientID parameter
  Configuration.SERVER_CLIENT_CONNECTION_TIMEOUT added, used in EntityConnectionServer
  EntityConnectionServerAdminImpl, minor refactoring
  Configuration bug fixed, now initializes SERVER_CLIENT_CONNECTION_TIMEOUT correctly
  AbstractTableSearchModel.initializeColumnComparator(), bug fixed, should use lexical comparator for Object types
  UiUtil.runWithProgressBar() added
  DefaultDatabaseConnection.disconnect() now uses isValid() instead of !con.isClosed() to check if connection is alive
  EntityUtil.getPropertyValues() re-generified
  EntityUtilTest.isPrimaryKeyModified() added
  Configuration.CLIENT_SCHEDULE_CONNECTION_VALIDATION renamed to CONNECTION_SCHEDULE_VALIDATION, constant changed
  LocalEntityConnectionProvider constructor overloaded with a scheduleValidityCheck parameter
  RemoteEntityConnectionProvider, some refactoring due to the above
  DefaultDatabaseConnection.disconnect(), isValid() call moved within try clause
  DefaultDatabaseConnection.isValid() now uses a hardcoded (1 sec) timeout during validity check instead of 0 (meaning no timeout)
  ServerException.LoginException is no longer final
  ServerException.AuthenticationException added
  EntityConnectionServerTest, no longer uses the default server/registry ports
  MaximumMatch, bug fixed, equalStartLength() did not normalize the strings before matching
  DefaultDatabaseConnection.disconnect() change reverted, calling isValid() is an overkill (especially with a query) when we are about to discard the connection, so we're back to !con.isClosed()